Fix item overlap on footer

--- a/src/style.css
+++ b/src/style.css
@@ -73,6 +73,7 @@ h1 {
 }
 
 .footer {
+  z-index: 2;
   position: fixed;
   bottom: 0;
   width: 100%;
